@@ -1,6 +1,7 @@
 package com.university.home.service;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
@@ -8,8 +9,10 @@ import org.springframework.stereotype.Service;
 
 import com.university.home.dto.CollTuitFormDto;
 import com.university.home.entity.CollTuit;
+import com.university.home.entity.College;
 import com.university.home.exception.CustomRestfullException;
 import com.university.home.repository.CollTuitRepository;
+import com.university.home.repository.CollegeRepository;
 
 import jakarta.transaction.Transactional;
 
@@ -18,17 +21,21 @@ public class AdminService {
 
 	@Autowired
 	CollTuitRepository collTuitRepository;
+	@Autowired
+	CollegeRepository collegeRepository;
 	
 	//===========등록금 관련 메서드================
 	@Transactional
 	public void createCollTuit(CollTuitFormDto  dto) {
-		 if (collTuitRepository.existsByCollegeId(dto.getCollegeId())) {
+		 if (collTuitRepository.existsById(dto.getCollegeId())) {
 	            throw new CustomRestfullException("이미 등록금이 입력된 학과입니다", HttpStatus.INTERNAL_SERVER_ERROR);
 	        }
 
 	        // DTO → Entity 변환 후 저장
 	        CollTuit collTuit = new CollTuit();
-	        collTuit.setCollegeId(dto.getCollegeId());
+	        College college = collegeRepository.findById(dto.getCollegeId())
+	        	    .orElseThrow(() -> new RuntimeException("College not found"));
+	        collTuit.setCollege(college);
 	        collTuit.setAmount(dto.getAmount());
 
 	        collTuitRepository.save(collTuit);
@@ -37,13 +44,13 @@ public class AdminService {
 		List<CollTuit> collTuitList =collTuitRepository.findAll();
 		
 		List<CollTuitFormDto> dtoList = collTuitList.stream()
-			        .map(c -> {
-			            CollTuitFormDto dto = new CollTuitFormDto();
-			            dto.setCollegeId(c.getCollegeId());
-			            dto.setAmount(c.getAmount());
-			            return dto;
-			        })
-			        .toList();
+				 .map(c -> {
+				        CollTuitFormDto dto = new CollTuitFormDto();
+				        dto.setCollegeId(c.getCollege().getId());
+				        dto.setAmount(c.getAmount());
+				        return dto;
+				    })
+				    .collect(Collectors.toList());
 
 	   return dtoList;
 	}
@@ -59,6 +66,7 @@ public class AdminService {
 		CollTuit collTuit = collTuitRepository.findById(dto.getCollegeId())
 		        .orElseThrow(() -> new 
 		        		CustomRestfullException("해당 학과 등록금이 존재하지 않습니다.", HttpStatus.NOT_FOUND));
+		
 		collTuit.setAmount(dto.getAmount());
 		return collTuit;
 	}
